Remove old break point and smeantic header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<div class="header">
+<header class="header">
 	<div class="header-inner">
 		<div class="logo"><a href="/">MaintainableCSS</a></div>
 		<!-- <div class="logo"><a href="/"><img src="/assets/img/logo_small.png" width="35" height="35"></a></div> -->
 		{% include navigation.html %}
 	</div>
-</div>
+</header>
