--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,17 +205,15 @@ a.navigation-isActive {
 @media(min-width: 37.5em) {
 	.content p {
 		font-size: 1.38em;
-		margin-bottom: 30px;
+		margin-bottom: 40px;
 	}
 }
 
 .content ol,
 .content ul {
-	max-width: 700px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 25px;
-	padding: 0 20px 10px;
+	margin-bottom: 35px;
+	padding-left: 20px;
+	padding-right: 20px;
 	color: #222;
 	font-family: 'PT serif';
 }
@@ -245,9 +243,6 @@ a.navigation-isActive {
 
 .content blockquote {
 	font-style: italic;
-	max-width: 700px;
-	margin-left: auto;
-	margin-right: auto;
 	margin-bottom: 30px;
 	padding: 0 20px;
 	color: #222;
