--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -14,4 +14,4 @@
 <link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#FF851B">
 <meta name="msapplication-TileColor" content="#FF851B">
 <meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png">
-<meta name="theme-color" content="#fcf6ff">
+<meta name="theme-color" content="#e9c9f9">
