--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
-<header class="header">
+<header class="header" role="banner">
 	<div class="header-inner">
 		<div class="logo"><a href="/">MaintainableCSS</a></div>
-		<!-- <div class="logo"><a href="/"><img src="/assets/img/logo_small.png" width="35" height="35"></a></div> -->
 		{% include navigation.html %}
 	</div>
 </header>
