--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
 	<meta itemprop="description" content="{{ site.description }}">
 {% endif %}
 
-<meta property="twitter:image" content="{{ site.url }}/assets/img/card3.png">
+<meta property="twitter:image" content="{{ site.url }}/assets/img/card.png">
 
 <link rel="stylesheet" href="/assets/css/main.css" type="text/css" media="all">
 
