--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,8 +1,8 @@
-<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="{{ site.url }}/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="{{ site.url }}/manifest.json">
-<link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#e9c9f9">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/apple-touch-icon.png?v=1">
+<link rel="icon" type="image/png" href="{{ site.url }}/favicon-32x32.png?v=1" sizes="32x32">
+<link rel="icon" type="image/png" href="{{ site.url }}/favicon-16x16.png?v=1" sizes="16x16">
+<link rel="manifest" href="{{ site.url }}/manifest.json?v=1">
+<link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg?v=1" color="#e9c9f9">
 <meta name="msapplication-TileColor" content="#e9c9f9">
-<meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png">
+<meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png?v=1">
 <meta name="theme-color" content="#e9c9f9">
