Consistent styles, upgraded button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,11 +99,36 @@ a:focus {
 }
 
 /**********************************************************
+* Primary button
+**********************************************************/
+
+.primaryLinkButton {
+	font-size: 0.94em;
+	display: inline-block;
+	text-decoration: none;
+	margin: 0 auto;
+	border-radius: 30px;
+	text-transform: uppercase;
+	padding: 12px 30px;
+	color: #222;
+	border: 2px solid #222;
+	font-weight: bold;
+	letter-spacing: 0.04em;
+	width: 150px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.primaryLinkButton:hover {
+	color: #fff;
+	background-color: #222;
+}
+
+/**********************************************************
 * Footer
 **********************************************************/
 
 .footer {
-	background-color: #f5f5f5;
 	padding: 20px;
 	overflow: hidden;
 }
@@ -127,7 +152,7 @@ a:focus {
 **********************************************************/
 
 .header {
-	background-color: #fcf6ff;
+	background-color: #fafafa;
 }
 
 .header-inner {
@@ -369,31 +394,6 @@ a.navigation-isActive {
 	}
 }
 
-.chapterNavigation a {
-	font-size: 0.94em;
-	display: inline-block;
-	text-decoration: none;
-	margin: 0 auto;
-	border-radius: 30px;
-	text-transform: uppercase;
-	padding: 12px 30px;
-	color: #222;
-	border: 2px solid #222;
-	font-weight: bold;
-	letter-spacing: 0.04em;
-	width: 150px;
-	text-align: center;
-	margin: 0 auto;
-}
-
-a.chapterNavigation-previous:hover,
-a.chapterNavigation-next:hover,
-a.chapterNavigation-previous:active,
-a.chapterNavigation-next:active {
-	color: #fff;
-	background-color: #222;
-}
-
 /**********************************************************
 * Hero
 **********************************************************/
@@ -403,6 +403,7 @@ a.chapterNavigation-next:active {
 	padding-right: 20px;
 	padding-top: 30px;
 	padding-bottom: 50px;
+	text-align: center;
 }
 
 @media(min-width: 37.5em) {
@@ -456,35 +457,12 @@ a.chapterNavigation-next:active {
 	}
 }
 
-.hero-button:link,
-.hero-button:visited {
-	text-transform: uppercase;
-	text-decoration: none;
-	padding: 14px 70px;
-	font-size: 0.94em;
-	border: 3px solid #8E55A9;
-	color: #8E55A9;
-	font-weight: bold;
-	letter-spacing: 0.04em;
-	width: 100px;
-	margin: 0 auto;
-	display: block;
-	text-align: center;
-	border-radius: 30px;
-}
-
-.hero-button:hover {
-	color: #fff;
-	background-color: #8E55A9;
-}
-
-
 /**********************************************************
 * Chapters
 **********************************************************/
 
 .chapters {
-	background-color: #fcf6ff;
+	background-color: #fafafa;
 	padding-top: 40px;
 	padding-bottom: 40px;
 }
@@ -774,7 +752,7 @@ a.chapterNavigation-next:active {
 	text-align: center;
 	margin: 0 auto;
 	-webkit-appearance: none;
-	border: 3px solid #ff851b;
+	border: 2px solid #ff851b;
 	background-color: transparent;
 	color: #ff851b;
 	width: 100%;
