Same colour case

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -354,7 +354,7 @@ a.navigation-isActive {
 .content ul code,
 .content li code {
 	font-size: 1.3em;
-	color: #FF851B;
+	color: #ff851b;
 }
 
 .content pre {
