--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,7 @@ a:focus {
 	text-align: center;
 }
 
-@media(min-width: 340px) {
+@media(min-width: 21.25em) {
 	.logo {
 		float: left;
 		font-size: 0.94em;
@@ -193,7 +193,7 @@ a:focus {
 	margin-top: 10px;
 }
 
-@media(min-width: 340px) {
+@media(min-width: 21.25em) {
 	.navigation {
 		float: right;
 		margin-top: 0;
@@ -211,7 +211,7 @@ a:focus {
 	text-decoration: none;
 }
 
-@media(min-width: 340px) {
+@media(min-width: 21.25em) {
 	.navigation a {
 		margin-left: 7px;
 		margin-right: 7px;
