--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="footer-inner">
-		<p>Created by <a href="http://adamsilver.io">Adam Silver</a>. Designing inclusive, simple and human experiences on the web. You can contribute to this project on <a href="http://github.com/adamsilver/maintainablecss.com/">Github</a>.</p>
+		<p>Written by <a href="http://adamsilver.io">Adam Silver</a>. Designing simple and inclusive websites. <a href="http://github.com/adamsilver/maintainablecss.com/">Contribute on Github</a>.</p>
 	</div>
 </footer>
