--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -7,7 +7,7 @@
 			<input type="hidden" name="LOCATION" value="{{page.url}}">
 
 			<h2 class="subscribeForm-heading">Want updates?</h2>
-			<p>Join my newsletter to get the latest MaintainableCSS updates and my usual articles about UX and front-end development.</p>
+			<p>Join my newsletter to get the latest MaintainableCSS updates and my usual articles about design and interface development.</p>
 
 			<label for="mce-EMAIL" class="subscribeForm-label">Your email address</label>
 
